<resources>
    <!--"Interview Handbook Application"-->
    <string name="app_name">Interview Handbook</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_db">Db</string>
    <string name="action_rate">Rate Us</string>
    <string name="openDrawer">Open navigation drawer</string>
    <string name="closeDrawer">Close navigation drawer</string>
    <string name="border_top">Border top</string>
    <string name="border_bottom">Border bottom</string>
    <string name="image_url">url</string>string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>

    <string name="basics">Basics</string>
    <string name="data_structure">Data Structure</string>
    <string name="basic_sorting">Basic Sorting</string>
    <string name="basic_misc">Basic Misc</string>
    <string name="coding">Part II - Coding</string>
    <string name="string">String</string>
    <string name="integer_array">Integer Array</string>
    <string name="binary_search">Binary Search</string>
    <string name="math_and_bit_manipulation">Math and Bit Manipulation</string>
    <string name="linked_list">Linked List</string>
    <string name="reverse">Reverse</string>
    <string name="binary_tree">Binary Tree</string>
    <string name="binary_search_tree">Binary Search Tree</string>
    <string name="backtracking">Backtracking</string>
    <string name="dynamic_programing">Dynamic Programing</string>

    <string name="license_text">copy right: all rights reversed</string>
    <string name="about_title">About</string>
    <string name="about_version">Engine Version:  V1\nDatabase Version:  20160315</string>
    <string name="about_author">Developer:  Ji Li, Yunwen Lei</string>
    <string name="about_license">© 2016 LolInfi, Inc.All rights Reserved</string>
    <string name="about_notice">Notice</string>
    <string name="about_rate">Rate Me</string>
    <string name="about_jiuzhang_usage">This code is provided by http://www.jiuzhang.com/, allowed forwarding.\n</string>
    <!--<string name="license_link">http://creativecommons.org/licenses/by-sa/4.0/</string>-->

    <string name="del_favorite_confirm">Do you want to delete it from favorite?</string>
    <string name="rate_app_confirm">Would you like to rate this app?</string>
    <string name="slide_algorithm">Algorithm</string>
    <string name="slide_java">Core Java</string>
    <string name="slide_android">Android</string>
    <string name="slide_about">About</string>
    <string name="slide_favorite">Favorite List</string>
    <string name="slide_version">V1.4.5</string>
    <string name="slide_feedback">Feedback</string>
    <string name="slide_database">DataBase</string>

    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>

    <string name="rateme__dialog_first_title">Rate your experience</string>
    <string name="rateme__dialog_first_message">How would you rate our app?</string>
    <string name="rateme__dialog_first_button_rate">Rate our app in the Play Store</string>
    <string name="rateme__dialog_first_thanks">Thanks for the rating!</string>
    <string name="rateme__dialog_feedback_message">Would you mind sharing your feedback?</string>
    <string name="rateme__email_subject">Feedback for %1$s</string>
    <string name="rateme__icon_content_description">Icon</string>
</resources>
